feat: create rental
